eks/springboot-health/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: game-2048
  name: deployment-backend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: backend
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend
    spec:
      containers:
      - image: heahaidu/springboot-health-bootstrap
        imagePullPolicy: Always
        name: backend
        ports:
        - containerPort: 8080
      nodeSelector:
        workload: game-2048
      tolerations:
      - key: workload
        operator: Equal
        value: game-2048
        effect: NoSchedule
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: topology.kubernetes.io/zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector: 
          matchLabels:
            app.kubernetes.io/name: backend 
---
apiVersion: v1
kind: Service
metadata:
  namespace: game-2048
  name: backend
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: game-2048
  name: ingress-backend
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-path: /actuator/health
    alb.ingress.kubernetes.io/group.name: shared-alb
    alb.ingress.kubernetes.io/group.order: '2'
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /actuator
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 80
